2005-08-04 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_node.cc, plat/win32/gpsim.def, gui/gui_breadboard.cc,
	modules/resistor.cc, src/stimuli.cc, src/stimuli.h,
	src/symbol.cc, src/symbol.h, src/value.h: Eliminated the
	node_list and stimulus_list. There are now Symbol_Table
	functions and iterators available for node_symbol and
	stimulus_symbol objects which contain Stimulus_Node and
	stimulus objects respectively.
	Adjusted the way stimulus and stimulus_Node objects are
	named. Unnamed objects are not put into the symbol table.
	The respective new_name() functions will add the objects
	into the symbol table appropriately. Removes several
	references that added these objects to the symbol table.

	Also modified the PullupResister to name the res IO_bi_directional
	i/o pin to pullupname + ".pin". Now the PullupResister
	exists in the symbol table as a module with what ever you
	named it. The pin is attribute of the PullupResister module.
	Whew!

2005-08-04 Scott Dattalo <scott@dattalo.com>
	* src/uart.cc, src/uart.h, src/p16x6x.cc, src/16bit-processors.cc,
	src/16bit-registers.cc, src/16bit-registers.h, src/p16f62x.cc:
	Add I/O source and sink connections to the usart peripheral. So
	now the usart is connected to I/O pins using the new I/O port design.

2005-08-02 J.R. Heisey <jrheisey@sourceforge.com>
	* src/os_dependent.cc, src/processor.cc,h, src/cod.cc,
	plat/win32/gpsim.def: Fixed a problem where loading a
	program file (no STC) using the GUI resulted source code
	not being found even though that source was in the same
	folder as the program file.

	* gui/gui_menu.cc: Fixed the display of cycle count in
	cycles where %Lx was used in a sprintf instead of the
	platform independent project macro PRINTF_INT64_MODIFIER.

2005-08-02 Scott Dattalo <scott@dattalo.com>
	* src/16bit-processors.cc, src/p18x.cc: The new I/O port register
	symbols were getting added to the symbol table twice. Also, the
	eeprom peripheral for some of the 18f devices was not getting