@@ -2455,7 +2455,7 @@ static void save_stc(GtkWidget *button, Breadboard_Window *bbw)
       module_iterator=module_iterator->next;
     }
 
-
+#if defined(NEW_SYMBOL_TABLE_CHANGES_REALLY_DO_WORK)
     // Save nodes and connections
     fprintf(fo, "\n\n# Connections:\n");
     list <Stimulus_Node *> :: iterator node_iterator;
@@ -2489,7 +2489,10 @@ static void save_stc(GtkWidget *button, Breadboard_Window *bbw)
 
     fprintf(fo, "\n\n# End.\n");
     fclose(fo);
+#else
 
+    cout << "WARNING the symbol table is partially broken so the netlist can't be saved.";
+#endif
     //text_dialog(filename);
 
 }
@@ -3752,6 +3755,7 @@ void Breadboard_Window::Build(void)
   	NewModule(*mi);
   }
 
+#if defined(NEW_SYMBOL_TABLE_CHANGES_REALLY_DO_WORK)
   // Loop node list
   Symbol_Table &ST = get_symbol_table();
   Symbol_Table::node_symbol_iterator it;
@@ -3763,7 +3767,9 @@ void Breadboard_Window::Build(void)
     	NodeConfigurationChanged(node);
     }
   }
-
+#else
+  cout <<"WARNING: symbol table is broken - can't save the node list\n";
+#endif
   gtk_widget_show(window);
 
   Update();
