@@ -496,6 +496,7 @@ Stimulus_Node * Symbol_Table::findNode(const char *s)
   return ((Stimulus_Node *)0);
 }
 
+#if defined(NEW_SYMBOL_TABLE_CHANGES_REALLY_DO_WORK)
 Symbol_Table::node_symbol_iterator Symbol_Table::beginNodeSymbol() {
   return (node_symbol_iterator)beginSymbol((node_symbol_iterator*)NULL,
     (node_symbol*)NULL);
@@ -504,6 +505,7 @@ Symbol_Table::node_symbol_iterator Symbol_Table::beginNodeSymbol() {
 Symbol_Table::node_symbol_iterator Symbol_Table::endNodeSymbol() {
     return endSymbol((node_symbol_iterator*) NULL, (node_symbol*)NULL);
 }
+#endif
 
 stimulus_symbol * Symbol_Table::findStimulusSymbol(const char *s)
 {
@@ -518,7 +520,7 @@ stimulus * Symbol_Table::findStimulus(const char *s)
   }
   return ((stimulus *)0);
 }
-
+#if defined(NEW_SYMBOL_TABLE_CHANGES_REALLY_DO_WORK)
 Symbol_Table::stimulus_symbol_iterator Symbol_Table::beginStimulusSymbol() {
   return (stimulus_symbol_iterator)beginSymbol(
     (stimulus_symbol_iterator*)NULL,
@@ -529,6 +531,7 @@ Symbol_Table::stimulus_symbol_iterator Symbol_Table::endStimulusSymbol() {
   return endSymbol((stimulus_symbol_iterator*) NULL,
     (stimulus_symbol*)NULL);
 }
+#endif
 
 bool Symbol_Table::Exist(const char *s) {
   return this->FindIt(s) != end();
